--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,13 @@
 html,
 body {
-  padding: 0;
+  height: 100%;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+    background-color: #404040;
+
+  }
 
 a {
   color: inherit;
